--- a/Giftshop/Views/Giftshop/index.cshtml
+++ b/Giftshop/Views/Giftshop/index.cshtml
@@ -33,7 +33,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-controller="Giftshop" asp-action="temstimonial">
+                                <a class="nav-link" asp-controller="Giftshop" asp-action="testimonial">
                                     Testimonial
                                 </a>
                             </li>
