--- a/Giftshop/Views/Giftshop/Contact.cshtml
+++ b/Giftshop/Views/Giftshop/Contact.cshtml
@@ -8,17 +8,17 @@
     <!-- header section strats -->
     <header class="header_section">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
-            <a class="navbar-brand" href="index.html">
+          @*  <a class="navbar-brand" href="index.html">
                 <span>
                     Giftos
                 </span>
-            </a>
+            </a>*@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class=""></span>
             </button>
 
             <div class="collapse navbar-collapse innerpage_navbar" id="navbarSupportedContent">
-                <ul class="navbar-nav  ">
+             @*   <ul class="navbar-nav  ">
                     <li class="nav-item ">
                         <a class="nav-link" asp-controller="Giftshop" asp-action="index">Home <span class="sr-only">(current)</span></a>
                     </li>
@@ -40,14 +40,14 @@
                     <li class="nav-item active">
                         <a class="nav-link" asp-controller="Giftshop" asp-action="Contact.cshtml">Contact Us</a>
                     </li>
-                </ul>
+                </ul>*@
                 <div class="user_option">
-                    <a href="">
+@*                    <a href="">
                         <i class="fa fa-user" aria-hidden="true"></i>
                         <span>
                             Login
                         </span>
-                    </a>
+                    </a>*@
                     <a href="">
                         <i class="fa fa-shopping-bag" aria-hidden="true"></i>
                     </a>
