--- a/Giftshop/Views/Giftshop/index.cshtml
+++ b/Giftshop/Views/Giftshop/index.cshtml
@@ -6,60 +6,60 @@
     <body>
         <div class="hero_area">
             <!-- header section strats -->
-            <header class="header_section">
-                <nav class="navbar navbar-expand-lg custom_nav-container ">
-                    <a class="navbar-brand" href="index.html">
-                        <span>
-                            Giftos
-                        </span>
-                    </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class=""></span>
-                    </button>
+             <header class="header_section">
+          <nav class="navbar navbar-expand-lg custom_nav-container ">
+          @*    <a class="navbar-brand" href="index.html">
+                  <span>
+                      Giftos
+                  </span>
+              </a>*@
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class=""></span>
+              </button>
 
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav  ">
-                            <li class="nav-item ">
-                                <a class="nav-link" asp-controller="Giftshop" asp-action="index">Home <span class="sr-only">(current)</span></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" asp-controller="Giftshop" asp-action="Shop">
-                                    Shop
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" asp-controller="Giftshop" asp-action="Why">
-                                    Why Us
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" asp-controller="Giftshop" asp-action="testimonial">
-                                    Testimonial
-                                </a>
-                            </li>
-                            <li class="nav-item active">
-                                <a class="nav-link" asp-controller="Giftshop" asp-action="Contact.cshtml">Contact Us</a>
-                            </li>
-                        </ul>
-                        <div class="user_option">
-                            <a href="">
-                                <i class="fa fa-user" aria-hidden="true"></i>
-                                <span>
-                                    Login
-                                </span>
-                            </a>
-                            <a href="">
-                                <i class="fa fa-shopping-bag" aria-hidden="true"></i>
-                            </a>
-                            <form class="form-inline ">
-                                <button class="btn nav_search-btn" type="submit">
-                                    <i class="fa fa-search" aria-hidden="true"></i>
-                                </button>
-                            </form>
-                        </div>
-                    </div>
-                </nav>
-            </header>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+               @*   <ul class="navbar-nav  ">
+                      <li class="nav-item ">
+                          <a class="nav-link" asp-controller="Giftshop" asp-action="index">Home <span class="sr-only">(current)</span></a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" asp-controller="Giftshop" asp-action="Shop">
+                              Shop
+                          </a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" asp-controller="Giftshop" asp-action="Why">
+                              Why Us
+                          </a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" asp-controller="Giftshop" asp-action="testimonial">
+                              Testimonial
+                          </a>
+                      </li>
+                      <li class="nav-item active">
+                          <a class="nav-link" asp-controller="Giftshop" asp-action="Contact.cshtml">Contact Us</a>
+                      </li>
+                  </ul>*@
+                  <div class="user_option">
+@*                      <a href="">
+                          <i class="fa fa-user" aria-hidden="true"></i>
+                          <span>
+                              Login
+                          </span>
+                      </a>*@
+                      <a href="">
+                          <i class="fa fa-shopping-bag" aria-hidden="true"></i>
+                      </a>
+                      <form class="form-inline ">
+                          <button class="btn nav_search-btn" type="submit">
+                              <i class="fa fa-search" aria-hidden="true"></i>
+                          </button>
+                      </form>
+                  </div>
+              </div>
+          </nav>
+      </header>
             <!-- end header section -->
             <!-- slider section -->
 
@@ -914,7 +914,7 @@
                 <div class="container">
                     <p>
                         &copy; <span id="displayYear"></span> All Rights Reserved By
-                        <a href="https://html.design/">Free Html Templates</a>
+                       
                     </p>
                 </div>
             </footer>
