--- a/Giftshop/Views/Giftshop/Why.cshtml
+++ b/Giftshop/Views/Giftshop/Why.cshtml
@@ -5,18 +5,18 @@
     <body>
         <div class="hero_area">
             <!-- header section strats -->
-            <header class="header_section">
-                <nav class="navbar navbar-expand-lg custom_nav-container ">
+            <!--<header class="header_section">
+                <nav class="navbar navbar-expand-lg custom_nav-container ">-->
                   @*  <a class="navbar-brand" href="index.html">
                         <span>
                             Giftos
                         </span>
                     </a>*@
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class=""></span>
                     </button>
 
-                    <div class="collapse navbar-collapse innerpage_navbar" id="navbarSupportedContent">
+                    <div class="collapse navbar-collapse innerpage_navbar" id="navbarSupportedContent">-->
                        @* <ul class="navbar-nav  ">
                             <li class="nav-item ">
                                 <a class="nav-link" asp-controller="Giftshop" asp-action="index">Home <span class="sr-only">(current)</span></a>
@@ -41,14 +41,14 @@
                                 <a class="nav-link" asp-controller="Giftshop" asp-action="Contact.cshtml">Contact Us</a>
                             </li>
                         </ul>*@
-                        <div class="user_option">
+                        <!--<div class="user_option">-->
 @*                            <a href="">
                                 <i class="fa fa-user" aria-hidden="true"></i>
                                 <span>
                                     Login
                                 </span>
                             </a>*@
-                            <a href="">
+                            <!--<a href="">
                                 <i class="fa fa-shopping-bag" aria-hidden="true"></i>
                             </a>
                             <form class="form-inline ">
@@ -59,7 +59,7 @@
                         </div>
                     </div>
                 </nav>
-            </header>
+            </header>-->
             <!-- end header section -->
 
         </div>
@@ -388,14 +388,14 @@
                 </div>
             </div>
             <!-- footer section -->
-            <footer class=" footer_section">
+          @*  <footer class=" footer_section">
                 <div class="container">
                     <p>
                         &copy; <span id="displayYear"></span> All Rights Reserved By
                         <a href="https://html.design/">Free Html Templates</a>
                     </p>
                 </div>
-            </footer>
+            </footer>*@
             <!-- footer section -->
 
         </section>
