--- a/Giftshop/Views/Shared/_Layout.cshtml
+++ b/Giftshop/Views/Shared/_Layout.cshtml
@@ -30,30 +30,37 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav  ">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                    </li>
+                    @* <li class="nav-item active">
+            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+        </li>*@
                     <li class="nav-item">
-                        <a class="nav-link" asp-controller="Giftshop" asp-action="Contact">Contact
+                        <a class="nav-link" asp-controller="Giftshop" asp-action="Contact">
+                            Contact
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-controller="Giftshop" asp-action="index">Index
+                        <a class="nav-link" asp-controller="Giftshop" asp-action="index">
+                            index
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-controller="Giftshop" asp-action="Shop">Shop
+                        <a class="nav-link" asp-controller="Giftshop" asp-action="Shop">
+                            Shop
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-controller="Giftshop" asp-action="testimonial">Testimonial
+                        <a class="nav-link" asp-controller="Giftshop" asp-action="testimonial">
+                            Testimonial
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" asp-controller="Giftshop" asp-action="Why">Why</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Student" asp-action="List">StudentInfo</a>
+                    </li>
                 </ul>
-                <div class="user_option">
+                @*<div class="user_option">
                     <a href="">
                         <i class="fa fa-user" aria-hidden="true"></i>
                         <span>
@@ -68,7 +75,7 @@
                             <i class="fa fa-search" aria-hidden="true"></i>
                         </button>
                     </form>
-                </div>
+                </div>*@
             </div>
         </nav>
     </header>
@@ -81,8 +88,8 @@
     <footer class=" footer_section">
         <div class="container">
             <p>
-                &copy; <span id="displayYear"></span> All Rights Reserved By
-                <a href="https://html.design/">Free Html Templates</a>
+                &copy; <span id="displayYear"></span> All Rights Reserved By Developer
+                @*<a href="https://html.design/">Free Html Templates</a>*@
             </p>
         </div>
     </footer>
