--- a/Giftshop/Views/Student/Edit.cshtml
+++ b/Giftshop/Views/Student/Edit.cshtml
@@ -1,21 +1,21 @@
 ﻿@model Giftshoplibary.Model.StudentInfoModel
 
 @{
-    ViewData["Title"] = "Insert";
+    ViewData["Title"] = "Edit";
 }
 
-<h1>Insert</h1>
+<h1>Edit</h1>
 
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-           @* <div class="form-group">
+            <div class="form-group">
                 <label asp-for="studentid" class="control-label"></label>
-                <input asp-for="studentid" class="form-control" />
+                <input asp-for="studentid" type="hidden" class="form-control" />
                 <span asp-validation-for="studentid" class="text-danger"></span>
-            </div>*@
+            </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -42,7 +42,7 @@
                 <span asp-validation-for="Mobilenumber" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
