--- a/Giftshop/Views/Student/Insert.cshtml
+++ b/Giftshop/Views/Student/Insert.cshtml
@@ -28,7 +28,10 @@
             </div>
             <div class="form-group">
                 <label asp-for="Course" class="control-label"></label>
-                <input asp-for="Course" class="form-control" />
+                <select class="form-control" asp-for="Course" asp-items="@(new SelectList(Model.CourcesBE,"courseid","course"))">
+                    <option>--Select Course--</option>
+                </select>
+                @*<input asp-for="Course" class="form-control" />*@
                 <span asp-validation-for="Course" class="text-danger"></span>
             </div>
             <div class="form-group">
