--- a/Giftshop/Views/Student/Insert.cshtml
+++ b/Giftshop/Views/Student/Insert.cshtml
@@ -28,13 +28,14 @@
             </div>
             <div class="form-group">
                 <label asp-for="Course" class="control-label"></label>
-                <select class="form-control" asp-for="Course" asp-items="@(new SelectList(Model.CourcesBE,"courseid","course"))">
+                <select class="form-control" asp-for="Course" asp-items="@(new SelectList(Model.CourcesBE,"course","course"))">
                     <option>--Select Course--</option>
                 </select>
                 @*<input asp-for="Course" class="form-control" />*@
                 <span asp-validation-for="Course" class="text-danger"></span>
             </div>
             <div class="form-group">
+
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
