--- a/Giftshop/Views/Student/Delete.cshtml
+++ b/Giftshop/Views/Student/Delete.cshtml
@@ -11,12 +11,12 @@
     
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+       @* <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.studentid)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.studentid)
-        </dd>
+        </dd>*@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
