--- a/Giftshop/Views/Student/Edit.cshtml
+++ b/Giftshop/Views/Student/Edit.cshtml
@@ -11,11 +11,11 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="studentid" class="control-label"></label>
+           <div class="form-group" >
+               @* <label asp-for="studentid" class="control-label"></label>*@
                 <input asp-for="studentid" type="hidden" class="form-control" />
-                <span asp-validation-for="studentid" class="text-danger"></span>
-            </div>
+@*                <span asp-validation-for="studentid" class="text-danger"></span>
+*@            </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
