--- a/Giftshop/Views/Student/Insert.cshtml
+++ b/Giftshop/Views/Student/Insert.cshtml
@@ -28,7 +28,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Course" class="control-label"></label>
-                <select class="form-control" asp-for="Course" asp-items="@(new SelectList(Model.CourcesBE,"course","course"))">
+                <select class="form-control" asp-for="Course" asp-items="@(new SelectList(Model.CourcesBE,"courseid","course"))">
                     <option>--Select Course--</option>
                 </select>
                 @*<input asp-for="Course" class="form-control" />*@
