--- a/Giftshop/Views/Student/Delete.cshtml
+++ b/Giftshop/Views/Student/Delete.cshtml
@@ -36,6 +36,12 @@
             @Html.DisplayFor(model => model.Course)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.College)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.College)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Email)
         </dt>
         <dd class = "col-sm-10">
