--- a/Giftshop/Views/Student/list.cshtml
+++ b/Giftshop/Views/Student/list.cshtml
@@ -25,6 +25,10 @@
                 @Html.DisplayNameFor(model => model.Course)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.College)
+            </th>
+
+            <th>
                 @Html.DisplayNameFor(model => model.Email)
             </th>
             <th>
@@ -47,6 +51,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Course)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.College)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
